# monocular_person_following

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build.yml
docker/jp45/: Dockerfile  Dockerfile.ros.noetic  build.sh  run.sh
docker/kinetic/: Dockerfile
docker/melodic/: .Dockerfile.swp  Dockerfile
docker/noetic/: Dockerfile  Dockerfile.ros.noetic  build.sh  run.sh
include/monocular_person_following/: context.hpp  tracklet.hpp
include/monocular_person_following/state/: initial_state.hpp  initial_training_state.hpp  reid_state.hpp  state.hpp  tracking_state.hpp
launch/: jetson_person_following.launch  jetson_person_following_sim.launch  monocular_person_following.launch  start_robot.launch
msg/: FaceDetection.msg  FaceDetectionArray.msg  Target.msg
rviz/: monocular_person_following.rviz
scripts/: face_detector_node.py  robot_controller.py  save_bag.sh  simple_gesture_recognition.py  visualization.py
scripts/eval/: convert_dataset2bag.py  generate_bb.py
src/: monocular_person_following_node.cpp
src/monocular_person_following/: context.cpp
src/monocular_person_following/state/: initial_state.cpp  initial_training_state.cpp  reid_state.cpp  tracking_state.cpp
srv/: Imprint.srv
